--- a/src/OnTopReplica/app.config
+++ b/src/OnTopReplica/app.config
@@ -56,6 +56,9 @@
        <setting name="HotKeyShowHide" serializeAs="String">
         <value>[CTRL]+[SHIFT]+O</value>
        </setting>
+        <setting name="HotKeyPassT" serializeAs="String">
+          <value>[CTRL]+[SHIFT]+P</value>
+        </setting>        
        <setting name="FullscreenMode" serializeAs="String">
         <value>Standard</value>
        </setting>
